--- a/public/style.css
+++ b/public/style.css
@@ -1,75 +1,80 @@
 /* -----------------header----------------------------- */
-header{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 img {
-    width: 600px;
-    height: 300px;
+  width: 600px;
+  height: 300px;
 }
 
 header ul {
-    display: flex;
-    list-style: none;
-    padding: 0;
-    
+  display: flex;
+  list-style: none;
+  padding: 0;
 }
 
-
-
 header li {
-    margin-left: 20px;
-    margin-right: 20px;
-    text-decoration: none;
-   
+  margin-left: 20px;
+  margin-right: 20px;
+  text-decoration: none;
 }
 
 a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 
 /* ---------------------------GenneralStyle------------------------------------------ */
 
 .mainContainer {
-    margin: 100px auto;
-    width: 600px;
-
+  
+  margin: 100px auto;
+  width: 600px;
+  
 }
-
 
 body {
-    margin: 0;
+  margin: 0;
 }
 
-
-ul {
-    margin-top: 15px;
-    display: flex;
+.membersList {
+  flex-wrap: wrap;
+  margin-top: 15px;
+  display: flex;
 }
 
-li{
-    margin-top: 5px;
-    margin-left: 10px;
-    margin-right: 10px;
+.memberCard {
+    width: 140px;
+    box-sizing: border-box;
+    border: 1px solid black;
+    margin: 5px;
+
+
 }
 
+li {
+  margin-top: 5px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+h3 {
+    margin-left: 15px;
+    margin-right: 15px;
+}
 
 /* ---------------------------footer--------------------------------- */
 footer {
-
-    display: flex;
-    align-items: center;
-    margin: 0 auto;
-    width: 600px;
-    padding: 15px;
-
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+  width: 600px;
+  padding: 15px;
 }
 
-
 .color {
-    background-color: #cfced36e; 
+  background-color: #cfced36e;
 }
