--- a/views/memberDetail.ejs
+++ b/views/memberDetail.ejs
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/style.css">
-</head>
-<body>
-    <%- include('./components/header.ejs') %> 
+    <link rel="stylesheet" href="/style.css" />
+  </head>
+  <body>
+    <%- include('./components/header.ejs') %>
 
-
-
-    <div class="mainContainer"> </div>
-    
-
-
-
-
-
-
+    <div class="mainContainer">
+      <h3>Name: <%= name %></h3>
+      <p>Email: <%= email %></p>
+      <p>Phone: <%= phone %></p>
+      <p>Date: <%= date %></p>
+      <p>Favorite Anime: <%= favoriteAnime %></p>
+      <button onclick="deleteMember()">Remove Member</button>
+    </div>
 
     <%- include('./components/footer.ejs') %>
-</body>
+    <script src="/script.js"></script>
+  </body>
 </html>
