--- a/views/createMember.ejs
+++ b/views/createMember.ejs
@@ -12,8 +12,25 @@
     
     <div class="mainContainer">
 
-
-        
+      <form action="/members/create" method="post">
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name" />
+        <br />
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" />
+        <br />
+        <label for="phone">Number</label>
+        <input type="text" id="phone" name="phone" />
+        <br />
+        <label for="favoriteAnime">favorite anime</label>
+        <input type="text" id="favoriteAnime" name="favoriteAnime" />
+        <br />
+        <label for="date">Date of membership</label>
+        <input type="date" id="date" name="date" />
+        <br />
+        <button>Save</button>
+      </form>
+      
     </div>
     
     
