--- a/views/memberDetail.ejs
+++ b/views/memberDetail.ejs
@@ -26,7 +26,7 @@
         <br />
 
         <label for="date">Date:</label>
-        <input type="text" id="date" name="date" value="<%= date %>" />
+        <input type="date" id="date" name="date" value="<%= date %>" />
         <br />
 
         <label for="favoriteAnime">Favorite Anime:</label>
